cleanup unused code, mod tidy, gofmt
